- Dodanie zależnosci dla testów - Dodanie testów - Poprawki kodu aby testy działały